--- a/textbasedad/textbasedad/textbasedad.vcxproj
+++ b/textbasedad/textbasedad/textbasedad.vcxproj
@@ -114,6 +114,7 @@
     <ClInclude Include="String Class.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="String Class.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
